--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.2.3",
-    "react-router-dom": "^7.12.0",
-    "@google/genai": "^1.35.0",
     "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "@google/genai": "^1.35.0",
+    "firebase": "^12.7.0",
+    "react-router-dom": "^7.12.0",
     "lucide-react": "^0.562.0",
     "recharts": "^3.6.0",
-    "framer-motion": "^11.0.0",
-    "firebase": "^12.7.0"
+    "framer-motion": "^12.25.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
